Resolves: tdf#122356 on row-activate click ok button

instead of proceeding directy to the ok response. Because there is
an additional handler installed in the okbutton to do extra stuff
that is needed to make this work

Change-Id: I9646ea6978533084c6c9c48b03806e46eaa49c33
Reviewed-on: https://gerrit.libreoffice.org/66047
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>